--- a/configuration.yaml
+++ b/configuration.yaml
@@ -31,7 +31,7 @@ input_number:
     icon: mdi:arrow-expand-vertical
   
   last_manual_boiler_setpoint:
-    name: Ostatnia nastawa na kotle
+    name: Last Manual Boiler Setpoint
     min: 20
     max: 80
     step: 1
@@ -59,7 +59,6 @@ climate:
     min_temp: 15
     max_temp: 23
     ac_mode: false
-    target_temp: 20
     cold_tolerance: 0.2
     hot_tolerance: 0.5
     target_temp_step: 0.5
@@ -73,7 +72,6 @@ climate:
     min_temp: 15
     max_temp: 23
     ac_mode: false
-    target_temp: 20
     cold_tolerance: 0.2
     hot_tolerance: 0.5
     target_temp_step: 0.5
@@ -87,7 +85,6 @@ climate:
     min_temp: 15
     max_temp: 23
     ac_mode: false
-    target_temp: 20
     cold_tolerance: 0.2
     hot_tolerance: 0.5
     target_temp_step: 0.5
@@ -101,7 +98,6 @@ climate:
     min_temp: 15
     max_temp: 23
     ac_mode: false
-    target_temp: 20
     cold_tolerance: 0.2
     hot_tolerance: 0.5
     target_temp_step: 0.5
@@ -115,7 +111,6 @@ climate:
     min_temp: 15
     max_temp: 23
     ac_mode: false
-    target_temp: 20
     cold_tolerance: 0.2
     hot_tolerance: 0.5
     target_temp_step: 0.5
@@ -129,7 +124,6 @@ climate:
     min_temp: 15
     max_temp: 23
     ac_mode: false
-    target_temp: 20
     cold_tolerance: 0.2
     hot_tolerance: 0.5
     target_temp_step: 0.5
@@ -143,7 +137,6 @@ climate:
     min_temp: 15
     max_temp: 23
     ac_mode: false
-    target_temp: 20
     cold_tolerance: 0.2
     hot_tolerance: 0.5
     target_temp_step: 0.5
@@ -157,7 +150,6 @@ climate:
     min_temp: 15
     max_temp: 23
     ac_mode: false
-    target_temp: 20
     cold_tolerance: 0.2
     hot_tolerance: 0.5
     target_temp_step: 0.5
@@ -171,7 +163,6 @@ climate:
     min_temp: 15
     max_temp: 23
     ac_mode: false
-    target_temp: 20
     cold_tolerance: 0.2
     hot_tolerance: 0.5
     target_temp_step: 0.5
