--- a/configuration.yaml
+++ b/configuration.yaml
@@ -258,6 +258,42 @@ automation:
             target:
               entity_id: switch.listwa_gorna_switch_8
 
+  - id: radiator_heating_pump_control
+    alias: "Radiator Heating - Pump Control"
+    mode: restart
+    trigger:
+      - platform: state
+        entity_id:
+          - switch.listwa_gorna_switch
+          - switch.listwa_dolna_switch_5
+          - switch.listwa_gorna_switch_3
+          - switch.listwa_dolna_switch_3
+    action:
+      - if:
+          - condition: or
+            conditions:
+              - condition: state
+                entity_id: switch.listwa_gorna_switch
+                state: "on"
+              - condition: state
+                entity_id: switch.listwa_dolna_switch_5
+                state: "on"
+              - condition: state
+                entity_id: switch.listwa_gorna_switch_3
+                state: "on"
+              - condition: state
+                entity_id: switch.listwa_dolna_switch_3
+                state: "on"
+        then:
+          - delay: "00:05:00"
+          - action: switch.turn_on
+            target:
+              entity_id: switch.listwa_dolna_switch
+        else:
+          - action: switch.turn_off
+            target:
+              entity_id: switch.listwa_dolna_switch
+
   - id: boiler_setpoint_deviation_notification
     alias: "Boiler Setpoint Deviation - Push Notification"
     mode: single
